--- a/docs/source/theory/basic_definitions/speckles.ipynb
+++ b/docs/source/theory/basic_definitions/speckles.ipynb
@@ -9,24 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {
     "nbsphinx": "hidden"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:create_speckles:Speckle: name: 0, group: epi, collection: long-6\n",
-      "INFO:create_speckles:Speckle: name: 1, group: epi, collection: long-6\n",
-      "INFO:create_speckles:Speckle: name: 2, group: epi, collection: long-6\n",
-      "INFO:create_speckles:Speckle: name: 3, group: epi, collection: long-6\n",
-      "INFO:create_speckles:Speckle: name: 4, group: epi, collection: long-6\n",
-      "INFO:create_speckles:Speckle: name: 5, group: epi, collection: long-6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "from project_heart.lv import LV\n",
@@ -46,7 +33,8 @@
     "import numpy as np\n",
     "import logging\n",
     "\n",
-    "epi_spks = []\n",
+    "endo_long = []\n",
+    "epi_long = []\n",
     "for i, a in enumerate(np.linspace(0, np.pi, 6, endpoint=False)):\n",
     "    \n",
     "    spk = lv_ideal.create_speckles(\n",
@@ -61,12 +49,13 @@
     "        n_subsets=6,\n",
     "        subsets_criteria=\"z2\",\n",
     "        cluster_criteria=\"z2\",\n",
-    "        n_clusters=8,\n",
+    "        n_clusters=10,\n",
     "        t=0.0,\n",
     "        kmin=-1,\n",
     "        kmax=0.95,\n",
     "        log_level=logging.WARN,\n",
     "    )\n",
+    "    endo_long.append(spk)\n",
     "\n",
     "    spk = lv_ideal.create_speckles(\n",
     "        collection=\"long-6\",\n",
@@ -84,9 +73,53 @@
     "        t=0.0,\n",
     "        kmin=-1,\n",
     "        kmax=0.95,\n",
-    "        log_level=logging.INFO,\n",
+    "        log_level=logging.WARN,\n",
     "    )\n",
-    "    epi_spks.append(spk)"
+    "    epi_long.append(spk)\n",
+    "\n",
+    "endo_circ = []\n",
+    "epi_circ = []\n",
+    "\n",
+    "names = [\"subapex\", \"apex\", \"superapex\", \"submid\", \"mid\", \"supermid\", \"subbase\", \"base\", \"superbase\"]\n",
+    "for i, a in enumerate(np.linspace(0.25, 0.95, len(names), endpoint=False)):\n",
+    "    \n",
+    "    spk = lv_ideal.create_speckles(\n",
+    "        collection=\"circ-6\",\n",
+    "        group=\"endo\",\n",
+    "        name=names[i],\n",
+    "        from_nodeset=LV_SURFS.ENDO,\n",
+    "        d=1.75,\n",
+    "        k=a,\n",
+    "        normal_to=[0.0, 0.0, 1.0],\n",
+    "        n_subsets=6,\n",
+    "        subsets_criteria=\"angles\",\n",
+    "        cluster_criteria=\"angles2\",\n",
+    "        n_clusters=8,\n",
+    "        t=0.0,\n",
+    "        kmin=-1.0,\n",
+    "        kmax=-1.0,\n",
+    "        log_level=logging.WARN,\n",
+    "    )\n",
+    "    endo_circ.append(spk)\n",
+    "\n",
+    "    spk = lv_ideal.create_speckles(\n",
+    "        collection=\"circ-6\",\n",
+    "        group=\"epi\",\n",
+    "        name=names[i],\n",
+    "        from_nodeset=LV_SURFS.EPI,\n",
+    "        d=1.75,\n",
+    "        k=a,\n",
+    "        normal_to=[0.0, 0.0, 1.0],\n",
+    "        n_subsets=6,\n",
+    "        subsets_criteria=\"angles\",\n",
+    "        cluster_criteria=\"angles2\",\n",
+    "        n_clusters=8,\n",
+    "        t=0.0,\n",
+    "        kmin=-1.0,\n",
+    "        kmax=-1.0,\n",
+    "        log_level=logging.WARN,\n",
+    "    )\n",
+    "    epi_circ.append(spk)"
    ]
   },
   {
@@ -97,51 +130,60 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 41,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5aed9c08cff245cfbcdfe850a5975935",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Renderer(camera=PerspectiveCamera(aspect=1.5, children=(DirectionalLight(position=(50000.000000000015, 70710.6…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
-    "lv_ideal.plot_speckles(epi_spks[1], add_centers=True, cmap=\"tab10\", categories=True)"
+    "## Sample Speckles"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Longitudinal Speckles"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4209952abc4749b494832c8c60729a2a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Renderer(camera=PerspectiveCamera(aspect=1.5, children=(DirectionalLight(position=(50000.000000000015, 70710.6…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "lv_ideal.plot_speckles(spk, cmap=\"jet\", add_k_centers=True, k_centers_as_line=True, k_bins=True, categories=True)"
+    "lv_ideal.plot_speckles(endo_long[1], add_centers=True, cmap=\"tab10\", categories=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lv_ideal.plot_speckles(epi_long[0], cmap=\"jet\", add_k_centers=True, k_centers_as_line=True, k_bins=True, categories=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Circumferential Speckles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lv_ideal.plot_speckles(endo_circ[7], add_centers=True, cmap=\"tab10\", categories=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lv_ideal.plot_speckles(epi_circ[7], cmap=\"jet\", add_k_centers=True, k_centers_as_line=True, k_bins=True, categories=True)"
    ]
   }
  ],
