--- a/docs/source/theory/basic_definitions/speckles.ipynb
+++ b/docs/source/theory/basic_definitions/speckles.ipynb
@@ -126,7 +126,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# What are Speckles?"
+    "## What are Speckles?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Speckles ..."
    ]
   },
   {
