radial metrics docs and quality fixes

--- a/docs/source/theory/geometrics/radial_metrics.ipynb
+++ b/docs/source/theory/geometrics/radial_metrics.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Speckle Tracking"
+    "# Radial Metrics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "nbsphinx": "hidden"
    },
@@ -19,15 +19,17 @@
     "from project_heart.lv import LV\n",
     "from project_heart.utils import set_jupyter_backend\n",
     "from project_heart.enums import *\n",
-    "\n",
     "set_jupyter_backend(\"pythreejs\")\n",
     "\n",
-    "sample_file_ideal = Path(\"../../_static/sample_files/ellipsoid.stl\")\n",
-    "lv_ideal = LV.from_file(sample_file_ideal) \n",
+    "import numpy as np\n",
+    "float_formatter = \"{:.5f}\".format\n",
+    "np.set_printoptions(formatter={'float_kind':float_formatter})\n",
     "\n",
+    "sample_file_ideal = Path(\"../../_static/sample_files/ideal_linear_pressure_increase.xplt\")\n",
+    "lv_ideal = LV.from_file(sample_file_ideal) \n",
     "lv_ideal.identify_regions(geo_type=LV_GEO_TYPES.IDEAL,\n",
     "                          apex_base_args=dict(ab_ql=0.05, ab_qh=0.97),\n",
-    "                          recompute_apex_base=True\n",
+    "                          recompute_apex_base=dict(ql=0.05, qh=0.95)\n",
     "                          )\n",
     "\n",
     "import numpy as np\n",
@@ -119,78 +121,236 @@
     "        kmax=-1.0,\n",
     "        log_level=logging.WARN,\n",
     "    )\n",
-    "    epi_circ.append(spk)"
+    "    epi_circ.append(spk)\n",
+    "\n",
+    "\n",
+    "\n",
+    "_ = lv_ideal.create_speckles(\n",
+    "        collection=\"SAMPLE\",\n",
+    "        group=\"epi\",\n",
+    "        name=\"SAMPLE\",\n",
+    "        from_nodeset=LV_SURFS.EPI,\n",
+    "        d=4.0,\n",
+    "        k=0.8,\n",
+    "        normal_to=[0.0, 0.0, 1.0],\n",
+    "        n_subsets=6,\n",
+    "        subsets_criteria=\"angles\",\n",
+    "        cluster_criteria=\"angles2\",\n",
+    "        n_clusters=8,\n",
+    "        t=0.0,\n",
+    "        kmin=-1.0,\n",
+    "        kmax=-1.0,\n",
+    "        log_level=logging.WARN,\n",
+    "    )\n",
+    "\n",
+    "_ = lv_ideal.create_speckles(\n",
+    "        collection=\"SAMPLE\",\n",
+    "        group=\"endo\",\n",
+    "        name=\"SAMPLE\",\n",
+    "        from_nodeset=LV_SURFS.ENDO,\n",
+    "        d=4.0,\n",
+    "        k=0.8,\n",
+    "        normal_to=[0.0, 0.0, 1.0],\n",
+    "        n_subsets=6,\n",
+    "        subsets_criteria=\"angles\",\n",
+    "        cluster_criteria=\"angles2\",\n",
+    "        n_clusters=8,\n",
+    "        t=0.0,\n",
+    "        kmin=-1.0,\n",
+    "        kmax=-1.0,\n",
+    "        log_level=logging.WARN,\n",
+    "    )\n",
+    "\n",
+    "_ = lv_ideal.compute_base_apex_ref_over_timesteps()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## What are Speckles?"
+    "## Radial metrics"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Speckles ..."
+    "In our implementation, 'radial metrics' are defined as any metric that relates a point with the left ventricle's longitudinal axis. In a clinical setting, these metrics are used to compute radial shortening and radial strain. However, it is often unclear how to proper establish its calculation as different reference points related to the longitudinal axis can be selected. \n",
+    "For instance, we can use a 'center' point located at a specified 'height' of the longitudinal axis and compute the vector length from this reference to a point on the endocardium surface. On the other hand, we can compute the perpendicular distance between a point on the endocardium and the longitudinal axis. \n",
+    "With this in mind, we provided two distinct metrics for radial measurements: 'Radial Distance' and 'Radial Length'. \n",
+    "\n",
+    "In addition, our implementation consider the usage of [Speckles](../basic_definitions/speckles.ipynb), which helps to approximate a clinical setting, facilitates the computation for certain metrics and helps to minimizing errors due to noise in geometry by averaging values based on local regions. See [docs](../basic_definitions/speckles.ipynb) for details."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sample Speckles"
+    "### Radial Distance"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Longitudinal Speckles"
+    "**Definition**: Perpendicular distance from a given point to normal vector (defined from longitudinal line)\n",
+    "\n",
+    "The 'Radial distance' is computed as the perpendicular distance (shortest euclidean distance) between a point (based on speckles) at a given region of the geometry and the longitudinal axis. Considering tha such axis is aligned with the Z axis, this metric can be thought as the '2D radius' from a top view (xy plane). Here is an example:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lv_ideal.plot_speckles(endo_long[1], add_centers=True, cmap=\"tab10\", categories=True)"
+    "sample_spk = lv_ideal.get_speckles(spk_name=\"SAMPLE\", spk_group=\"epi\", spk_collection=\"SAMPLE\")[0]\n",
+    "timestep = 0.0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "67d0907ebbac434cbcdcb11683e44cbf",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Renderer(camera=PerspectiveCamera(aspect=1.5, children=(DirectionalLight(position=(50000.000000000015, 70710.6…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "lv_ideal.plot_speckles(epi_long[0], cmap=\"jet\", add_k_centers=True, k_centers_as_line=True, k_bins=True, categories=True)"
+    "rd = lv_ideal.plot_speckles_radial_distances(sample_spk, t=timestep)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:LV.BaseMetricsComputations:Computing metric 'LV_STATES.RADIAL_DISTANCE'\n"
+     ]
+    }
+   ],
+   "source": [
+    "rds = lv_ideal.radial_distance(sample_spk, \n",
+    "                       recompute=True, \n",
+    "                       log_level=logging.WARN, \n",
+    "                       approach=\"moving_vector\",\n",
+    "                       t=timestep\n",
+    "                       )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(34.94247754222283, 34.94247754222283)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rd, rds"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Circumferential Speckles"
+    "### Radial Length"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Definition**:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "acd2867757d9423bbf54dbb7ee52c900",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Renderer(camera=PerspectiveCamera(aspect=1.5, children=(DirectionalLight(position=(50000.000000000015, 70710.6…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "lv_ideal.plot_speckles(endo_circ[7], add_centers=True, cmap=\"tab10\", categories=True)"
+    "sample_spk = lv_ideal.get_speckles(\n",
+    "    spk_name=\"SAMPLE\", spk_group=\"epi\", spk_collection=\"SAMPLE\")[0]\n",
+    "rd = lv_ideal.plot_speckles_radial_lengths(sample_spk, t=1.0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Thinner speckles, better results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "54d9b0d3e96e488682c9388fd4ea104e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Renderer(camera=PerspectiveCamera(aspect=1.5, children=(DirectionalLight(position=(50000.000000000015, 70710.6…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "lv_ideal.plot_speckles(epi_circ[7], cmap=\"jet\", add_k_centers=True, k_centers_as_line=True, k_bins=True, categories=True)"
+    "circ_spks = lv_ideal.get_speckles(spk_name=\"base\", spk_collection=\"circ-6\")\n",
+    "rd = lv_ideal.plot_speckles_radial_lengths(circ_spks[-1], t=1.0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## "
    ]
   }
  ],
