trying to upload new sample files to docs

--- a/docs/source/theory/geometrics/radial_metrics.ipynb
+++ b/docs/source/theory/geometrics/radial_metrics.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "from project_heart.lv import LV\n",
+    "# from project_heart.lv import LV\n",
     "from project_heart.utils import set_jupyter_backend\n",
     "from project_heart.enums import *\n",
     "set_jupyter_backend(\"pythreejs\")\n",
@@ -28,8 +28,11 @@
     "from project_heart.examples import get_lv_ideal\n",
     "from project_heart.examples import get_lv_typeA\n",
     "\n",
-    "lv_ideal = get_lv_ideal()\n",
-    "lv_typeA = get_lv_typeA()\n",
+    "lv_ideal = get_lv_ideal(Path(\"../../_static/sample_files/ideal_linear_pressure_increase copy.xplt\"))\n",
+    "lv_typeA = get_lv_typeA(\n",
+    "    Path(\"../../_static/sample_files/lv_typeA_hex.vtk\"),\n",
+    "    Path(\"../../_static/sample_files/sample_displacement_lv_typeA_hex_states_linear_press_incr.pbz2\")\n",
+    "    )\n",
     "\n",
     "sample_spk_typeA = lv_typeA.get_speckles(spk_name=\"SAMPLE\", spk_group=\"epi\", spk_collection=\"SAMPLE\")[0]"
    ]
